# Capstone

./: .gitignore  README.md  main.py  pyproject.toml  start_ollama.sh  test_curl.sh
mcp_server/: go.mod  server.go
mcp_server/tools/: mongo_wrapper.go  tools.go  weather.go  weight_logger.go
ollama_python_server/: app.py  main.py  pyproject.toml  system_prompt.txt
ollama_python_server/templates/: chat.html
weigand_blog/: webserver_start.sh
weigand_blog/content/about/: _index.md
weigand_blog/content/posts/.obsidian/: workspace.json
weigand_blog/content/posts/architecture/: index.md
weigand_blog/content/posts/available_tools/: index.md
weigand_blog/content/posts/development_challenges/: index.md
weigand_blog/content/posts/frontend_development/: index.md
weigand_blog/content/posts/ollama_integration/: index.md
weigand_blog/content/posts/ollama_with_langchain/: index.md
weigand_blog/content/posts/scalability_considerations/: index.md
weigand_blog/content/posts/updated_architecture/: index.md
weigand_blog/content/posts/whisper_integration/: index.md
weigand_blog/content/showcase/: _index.md
weigand_blog/public/: index.html  index.xml  sitemap.xml
weigand_blog/public/about/: index.html  index.xml
weigand_blog/public/page/2/: index.html
weigand_blog/public/pictures/: index.html  index.xml
weigand_blog/public/posts/: index.html  index.xml
weigand_blog/public/posts/2025-09-26/: index.html
weigand_blog/public/posts/architecture/: index.html
weigand_blog/public/showcase/: index.html  index.xml
(+20 files in other folders)
